[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/Fonts/orbitron_light_8.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/GUI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Fonts/orbitron_bold_very_large.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Images/Fonts/orbitron_mainmenu.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/GUI/MenuShotguns.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Sounds/Effects/Weapons/shotgun-shoot.wav" type="AudioStream" id=7]

[sub_resource type="Theme" id=1]

default_font = ExtResource( 1 )

[node name="MainMenu" type="ViewportContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 1 )
stretch = true
stretch_shrink = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Theme" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="." index="0"]

editor/display_folded = true
self_modulate = Color( 0.746094, 0.17778, 0.17778, 1 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Theme", "Visibility" ]

[node name="icon" type="Sprite" parent="Panel" index="0"]

position = Vector2( 45.4927, 554.268 )
texture = ExtResource( 3 )

[node name="VersionLabel" type="Label" parent="Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 907.0
margin_top = 577.0
margin_right = 1012.0
margin_bottom = 593.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "GoDoM v0.1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Mouse", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MenuContainer" type="Container" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TitleLabel" type="Label" parent="MenuContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 321.0
margin_top = 109.0
margin_right = 702.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.445908, 0.597656, 0.554977, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 20
text = "GoDoM"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags", "custom_colors", "custom_constants", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 361.0
margin_top = 220.0
margin_right = 663.0
margin_bottom = 380.0
rect_min_size = Vector2( 302, 160 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="NewGame" type="Button" parent="MenuContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 314.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.691406, 0.691406, 0.691406, 1 )
custom_colors/font_color_hover = Color( 0.447059, 0.596078, 0.552941, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="LoadGame" type="Button" parent="MenuContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 314.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.690196, 0.690196, 0.690196, 1 )
custom_colors/font_color_hover = Color( 0.447059, 0.596078, 0.552941, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load Game"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Settings" type="Button" parent="MenuContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 314.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.690196, 0.690196, 0.690196, 1 )
custom_colors/font_color_hover = Color( 0.447059, 0.596078, 0.552941, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Settings"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Quit" type="Button" parent="MenuContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 314.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.690196, 0.690196, 0.690196, 1 )
custom_colors/font_color_hover = Color( 0.447059, 0.596078, 0.552941, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "QUIT"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "custom_colors", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Viewport" type="Viewport" parent="." index="2"]

arvr = false
size = Vector2( 1024, 600 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 1
render_target_v_flip = false
render_target_clear_mode = 2
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "GUI", "Render Target", "Rendering" ]

[node name="Camera2" type="Camera" parent="Viewport" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.28511 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 1
current = true
fov = 70.0
size = 5.0
near = 0.05
far = 100.0

[node name="MenuShotguns" parent="Viewport" index="1" instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="focus_entered" from="MenuContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_focus_entered"]

[connection signal="pressed" from="MenuContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]

[connection signal="focus_entered" from="MenuContainer/VBoxContainer/LoadGame" to="." method="_on_LoadGame_focus_entered"]

[connection signal="pressed" from="MenuContainer/VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]

[connection signal="focus_entered" from="MenuContainer/VBoxContainer/Settings" to="." method="_on_Settings_focus_entered"]

[connection signal="pressed" from="MenuContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]

[connection signal="focus_entered" from="MenuContainer/VBoxContainer/Quit" to="." method="_on_Quit_focus_entered"]

[connection signal="pressed" from="MenuContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]


